GPC/tests/examples/fail/notInscope.gpc

int GPRM::Test::notInscope() {
    int y = x + 2; //x not defined
}
